<resources>
    <string name="app_name">Yummy</string>
    <string name="profile" />
    <string name="pageProfile">Profile</string>
    <string name="weekplan">Week Plan</string>
    <string name="logout">LogOut</string>
    <string name="favouritelist">Favourite List</string>
    <string name="pageavailabledishes">Available Dishes</string>
    <string name="pagedishdetail">Dish Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Countries</string>
    <string name="AvailableDIshes">Available Dishes</string>
    <string name="Ingredients">Ingredients</string>
    <string name="SeeAll"><u>See All</u></string>
    <string name="DishType">Dish Type</string>
    <string name="Search">Search</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tues">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thur">Thur</string>
    <string name="Fri">Fri</string>
    <string name="Category">Categories</string>
    <string name="planAway">Plan Away</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signInUL"><u>Sign in</u></string>
    <string name="noAcc">Don\'t Have An Account ...</string>
    <string name="signup">Sign Up</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="item4">Item 4</string>
    <string name="item5">Item 5</string>
    <string name="item6">Item 6</string>
    <string name="pasta">Chicken Alfredo</string>
    <string name="italy">Italy</string>
    <string name="addToFav">Add to favorites</string>
    <string name="addToPlan">Add to my plan</string>
    <string name="itemDetail">Meal Details</string>
    <string name="weeklyPlan">Weekly Plan</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="SignUpUL"><u>Sign up</u></string>
    <string name="ingredients"><u>Ingredients</u></string>
    <string name="directions"><u>Directions</u></string>
    <string name="videoDirections"><u>Video Directions</u></string>
    <string name="haveAcc">Already Have An Account ...</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="forYou">For You</string>
    <string name="trending">Trending</string>
    <string name="history">History</string>
    <string name="newDishes">New Dishes</string>
</resources>