<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meal_details.view.page_item_details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/itemDetail"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="373dp"
            android:layout_height="380dp"
            android:layout_margin="5dp"
            android:layout_marginTop="24dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:id="@+id/mealImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="8dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/chickenalfredo" />


        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="401dp" />

        <View
            android:id="@+id/view"
            android:layout_width="317dp"
            android:layout_height="150dp"
            android:layout_marginTop="316dp"
            android:background="@drawable/rounded_button"
            android:elevation="15dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/card" />

        <TextView
            android:id="@+id/mealName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:gravity="center"
            android:text="@string/pasta"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/mealOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:text="@string/italy"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/mealName"
            app:layout_constraintStart_toStartOf="@+id/mealName"
            app:layout_constraintTop_toBottomOf="@+id/mealName"
            app:layout_constraintVertical_bias="0.552" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/ingredients"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/directions"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredients" />

        <TextView
            android:id="@+id/step1"
            android:elevation="20dp"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/videoDirections"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/step1" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/videoView"
            android:layout_width="378dp"
            android:layout_height="313dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <Button
            android:id="@+id/btnAddToFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/rounded_button"
            android:text="@string/addToFav"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/videoView" />

        <Button
            android:id="@+id/btnAddToMyPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/addToPlan"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/btnAddToFav"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="@+id/btnAddToFav"
            app:layout_constraintTop_toBottomOf="@+id/btnAddToFav" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIngredients"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_height="420dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" >

        </androidx.recyclerview.widget.RecyclerView>



        <CheckBox
            android:id="@+id/radioButtonSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="4dp"
            android:text="@string/sat"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btnAddToMyPlan" />

        <CheckBox
            android:id="@+id/radioButtonSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/sun"
            app:layout_constraintBottom_toBottomOf="@+id/radioButtonSat"
            app:layout_constraintStart_toEndOf="@+id/radioButtonSat"
            app:layout_constraintTop_toTopOf="@+id/radioButtonSat"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/radioButtonMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/Mon"
            app:layout_constraintBottom_toBottomOf="@+id/radioButtonSun"
            app:layout_constraintStart_toEndOf="@+id/radioButtonSun"
            app:layout_constraintTop_toTopOf="@+id/radioButtonSun"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/radioButtonTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/Tues"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonSat" />

        <CheckBox
            android:id="@+id/radioButtonWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/Wed"
            app:layout_constraintBottom_toBottomOf="@+id/radioButtonTue"
            app:layout_constraintStart_toEndOf="@+id/radioButtonTue"
            app:layout_constraintTop_toTopOf="@+id/radioButtonTue" />

        <CheckBox
            android:id="@+id/radioButtonThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/Thur"
            app:layout_constraintBottom_toBottomOf="@+id/radioButtonWed"
            app:layout_constraintStart_toEndOf="@+id/radioButtonWed"
            app:layout_constraintTop_toTopOf="@+id/radioButtonWed" />

        <CheckBox
            android:id="@+id/radioButtonFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/Fri"
            app:layout_constraintBottom_toBottomOf="@+id/radioButtonThu"
            app:layout_constraintStart_toEndOf="@+id/radioButtonThu"
            app:layout_constraintTop_toTopOf="@+id/radioButtonMon"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>