<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.view.Page_Sign_Up">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_main"
        android:layout_width="240dp"
        android:layout_height="197dp"
        android:layout_marginTop="88dp"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_logo"
        app:lottie_autoPlay="true"
        app:lottie_fileName="fork.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosmaller" />

    <TextView
        android:id="@+id/txt_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/planAway"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/imgViewUserName"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_main"
        app:srcCompat="@drawable/user" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D9D9D9"
        android:hint="@string/password"
        android:outlineProvider="none"
        android:paddingLeft="20dp"
        android:shadowColor="#D9D9D9"
        app:barrierMargin="@dimen/material_emphasis_disabled"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <ImageView
        android:id="@+id/imgConfirmPassword"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/imgViewUserName"
        app:layout_constraintTop_toTopOf="@+id/editTextConfirmPassword"
        app:srcCompat="@drawable/lock" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextConfirmPassword"
        android:inputType="textPassword"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D9D9D9"
        android:hint="@string/confirmPassword"
        android:outlineProvider="none"
        android:paddingLeft="20dp"
        android:shadowColor="#D9D9D9"
        app:barrierMargin="@dimen/material_emphasis_disabled"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUserName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D9D9D9"
        android:hint="User Name"
        android:outlineProvider="none"
        android:paddingLeft="20dp"
        android:shadowColor="#D9D9D9"
        app:barrierMargin="@dimen/material_emphasis_disabled"
        app:layout_constraintStart_toEndOf="@+id/imgViewUserName"
        app:layout_constraintTop_toTopOf="@+id/imgViewUserName" />

    <ImageView
        android:id="@+id/imgViewPassword"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/imgViewUserName"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:srcCompat="@drawable/lock" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#D9D9D9"
        android:shadowColor="#D9D9D9"
        android:text="@string/signup"
        android:textColor="#020202"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <TextView
        android:id="@+id/txtViewAlreadyHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveAcc"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/txtViewSignInHL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/signInUL"
        android:textColor="#563CF9"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtViewAlreadyHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toEndOf="@+id/txtViewAlreadyHaveAcc" />

    <ImageView
        android:id="@+id/signUpSkip"
        android:layout_width="108dp"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/skip" />


</androidx.constraintlayout.widget.ConstraintLayout>