<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn.view.Page_Sign_In">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_main"
        android:layout_width="240dp"
        android:layout_height="197dp"
        android:layout_marginTop="88dp"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_logo"
        app:lottie_autoPlay="true"
        app:lottie_fileName="fork.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosmaller" />

    <TextView
        android:id="@+id/txt_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/planAway"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/imgViewSignInUserName"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_main"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imgViewSignInPassword"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imgViewSignInUserName"
        app:layout_constraintTop_toBottomOf="@+id/imgViewSignInUserName"
        app:srcCompat="@drawable/lock" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTxtSignInUserName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D9D9D9"
        android:hint="User Name"
        android:outlineProvider="none"
        android:paddingLeft="16dp"
        android:shadowColor="#D9D9D9"
        app:barrierMargin="@dimen/material_emphasis_disabled"
        app:layout_constraintStart_toEndOf="@+id/imgViewSignInUserName"
        app:layout_constraintTop_toTopOf="@+id/imgViewSignInUserName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextSignInPassword"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D9D9D9"
        android:hint="@string/password"
        android:outlineProvider="none"
        android:paddingLeft="16dp"
        android:shadowColor="#D9D9D9"
        android:inputType="textPassword"
        app:barrierMargin="@dimen/material_emphasis_disabled"
        app:layout_constraintEnd_toEndOf="@+id/editTxtSignInUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTxtSignInUserName" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="#D9D9D9"
        android:shadowColor="#D9D9D9"
        android:text="@string/signin"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignInPassword" />

    <TextView
        android:id="@+id/txtViewDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/noAcc"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <TextView
        android:id="@+id/txtViewSignUpHL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/SignUpUL"
        android:textColor="#563CF9"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtViewDontHaveAccount"
        app:layout_constraintStart_toEndOf="@+id/txtViewDontHaveAccount" />

    <ImageView
        android:id="@+id/googleImgSignIn"
        android:layout_width="78dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txtViewSignUpHL"
        app:layout_constraintStart_toStartOf="@+id/txtViewDontHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDontHaveAccount"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/signInSkip"
        android:layout_width="108dp"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/skip" />

</androidx.constraintlayout.widget.ConstraintLayout>